5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1807_2566.log
== TEST (2019-06-13 06:37:12) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:38:05) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 10
	if x[i] == 3:
		y[1] += 10
	if x[i] == 4:
		y[2] += 10
	if x[i] == 5:
		y[3] += 10
	if x[i] == 6:
		y[4] += 10
	if x[i] == 7:
		y[5] += 10
		
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:38:21) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 10
	if x[i] == 3:
		y[1] += 10
	if x[i] == 4:
		y[2] += 10
	if x[i] == 5:
		y[3] += 10
	if x[i] == 6:
		y[4] += 10
	if x[i] == 7:
		y[5] += 10
		
print(y)

-- EXECUTION TIME:
1.2047
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30  0  0 30 40 60]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10 20 40 50 50 80]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20 10 30 10 20 40]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:38:32) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 10
	if x[i] == 3:
		y[1] += 10
	if x[i] == 4:
		y[2] += 10
	if x[i] == 5:
		y[3] += 10
	if x[i] == 6:
		y[4] += 10
	if x[i] == 7:
		y[5] += 10
		
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:38:41) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 10
	if x[i] == 3:
		y[1] += 10
	if x[i] == 4:
		y[2] += 10
	if x[i] == 5:
		y[3] += 10
	if x[i] == 6:
		y[4] += 10
	if x[i] == 7:
		y[5] += 10
		
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:41:34) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1
for i in range(size(y))
	y[i]=round(y[i]/size(x)*100,1)

print(y)

-- ERROR:
File "XXXX", line 20
    for i in range(size(y))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:41:51) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1

for e in range(size(y))
	y[i]=round(y[i]/size(x)*100,1)

print(y)

-- ERROR:
File "XXXX", line 21
    for e in range(size(y))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:42:19) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1


for e in range(size(y)):
	y[i]=round(y[i]/size(x)*100,1)

print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:44:02) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1


for e in range(size(y)):
	y[i]=round(y[i]/size(x)*100,1)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:45:30) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1


for i in range(size(y)):
	y[i]=round(y[i]/size(x)*100,1)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:45:55) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1


for i in range(size(y)):
	y[i]=round(y[i]/size(x)*100,1)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:46:04) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1


for i in range(size(y)):
	y[i]=round(y[i]/size(x)*100,1)
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:46:10) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1


for i in range(size(y)):
	y[i]=round(y[i]/size(x)*100,1)
print(y)

-- EXECUTION TIME:
1.19188
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:46:14) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6,dtype=int)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1


for i in range(size(y)):
	y[i]=round(y[i]/size(x)*100,1)
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:46:37) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1


for i in range(size(y)):
	y[i]=round(y[i]/size(x)*100,1)
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:46:54) 
-- CODE:
from numpy import *

x = array(eval(input()))

y = zeros(6)

for i in range(size(x)):
	if x[i] == 2:
		y[0] += 1
	if x[i] == 3:
		y[1] += 1
	if x[i] == 4:
		y[2] += 1
	if x[i] == 5:
		y[3] += 1
	if x[i] == 6:
		y[4] += 1
	if x[i] == 7:
		y[5] += 1


for i in range(size(y)):
	y[i]=round(y[i]/size(x)*100,1)
print(y)

-- EXECUTION TIME:
1.1383
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
